2003-07-22  Malcolm Tredinnick <malcolm@commsecure.com.au>

	* wireless-applet.glade, wireless-applet.c: Remove the "show
	dialog box" preference, since it was never being used
	internally. Fixes bug #117957.

2003-06-04  Kevin Vandersloot

	* wireless_applet.c: Expand for Fitt's law and pack tight when possible. Also handle 
	vertical panels better.

2003-05-07  Dennis Cranston <dennis_cranston at yahoo com>

	* wireless-applet.glade:  HIGify the action area of the preferences
	dialog.  
	* wireless-applet.c:  Disable resizing of the dialog.

2003-04-07  Kevin Vandersloot <kfv101@psu.edu>

	* *.server.in.in: tranlsate the catagory so applet gets placed in the right catagory.
	Patch from Hidetoshi Tajima. Fixes bug #112455

2003-04-30  Kevin Vandersloot <kfv101@psu.edu>

	* wireless-applet.c: open pixbufs on startup so they aren't read form the file
	all the time. Fixes bug #111893

2003-04-26  Dennis Cranston <dennis_cranston at yahoo com>

	* wireless-applet.glade:  HIGify the preferences dialog: fix widget
	padding; add missing mnemonic; set default button.
	 
2003-03-20  Evan Martin <martine@cs.washington.edu>

	* wireless-applet.c: When there is no wireless device, show "No
	Wireless Devices" in prefs dialog (instead of an empty menu).

2003-03-10  Kevin Vandersloot <kfv101@psu.edu>

	* wireless-applet.c: destroy the dialogs after being run. Fixes bug #104465. Draw
	the applet even if no devices. Also don't close the wireless file if it doesn't exist

2003-03-10  Kevin Vandersloot <kfv101@psu.edu>

	* wireless-applet.c: don't set gconf string if it's NULL. Also if there's no devices then
	there's no menuitems so don't try to get data from them. Should fix bug #107722

2003-01-21  Arvind Samptur <arvind.samptur@wipro.com>
	* wireless-applet.c (wireless_applet_destroy): Destroy
	the prefs dialog on destroying the applet.

2002-12-14  Fernando Herrera <fherrera@onirica.com>

	* GNOME_Panel_WirelessApplet.server.in.in: added bugzilla attributtes
