@@ -1,3 +1,8 @@
+2003-08-06  Bastien Nocera  <hadess@hadess.net>
+
+	* wireless-applet.c: (wireless_applet_load_theme),
+	(show_warning_dialog): removed dead code
+
 2003-07-22  Malcolm Tredinnick <malcolm@commsecure.com.au>
 
 	* wireless-applet.glade, wireless-applet.c: Remove the "show
